Padding fix for the expanding and collapsing list buttons

--- a/css/index.css
+++ b/css/index.css
@@ -50,6 +50,7 @@ footer hr {
 
 .tech-btn {
     order: 2;
+    padding: 0;
 }
 
 .tech-btn ~ .line-wing:first-of-type {
